tinyc/test/good/ptr-from-cast-int.c
int main()
{
    int *p = ( int * ) 0xf000u;

    return 0;
}
