tinyc/test/bad/ptr-diff-int-void.c
int main()
{
    int *p1;
    void *p2;

    p1 - p2;
    return 0;
}
